--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 
                 <div class="text-center">
-                    <div class="author-img" style="background-image: url(https://shorturl.at/hkxHP);"></div>
+                    <div class="author-img" style="background-image: url('https://shorturl.at/hkxHP');"></div>
                     <h1 id="colorlib-logo"><a href="#">PRANAV JHA</a></h1>
                     <span class="position">IT Engineer</span>
                 </div>
