--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-    <script src="http://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
+    <script src="https://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
 
 </head>
 <body>
@@ -78,7 +78,7 @@
                                 </div>
                                 </div>
                             </li>
-                            <li style="background-image: url(https://image.freepik.com/free-photo/laptop-computer-with-white-background-home-office-business-office-concept_55099-127.jpg);">
+                            <li style="background-image: url('https://image.freepik.com/free-photo/laptop-computer-with-white-background-home-office-business-office-concept_55099-127.jpg');">
                                 <div class="overlay"></div>
                                 <div class="container-fluid">
                                 <div class="row">
