--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-    <script src="https://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
+    <script src="http://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
 
 </head>
 <body>
@@ -36,7 +36,7 @@
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 
                 <div class="text-center">
-                    <div class="author-img" style="background-image: url('https://shorturl.at/hkxHP');"></div>
+                    <div class="author-img" style="background-image: url(https://shorturl.at/hkxHP);"></div>
                     <h1 id="colorlib-logo"><a href="#">PRANAV JHA</a></h1>
                     <span class="position">IT Engineer</span>
                 </div>
@@ -62,7 +62,7 @@
                 <section id="colorlib-hero" class="js-fullheight" data-section="home">
                     <div class="flexslider js-fullheight">
                         <ul class="slides">
-                            <li style="background-image: url('https://images.pexels.com/photos/373076/pexels-photo-373076.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
+                            <li style="background-image: url(https://images.pexels.com/photos/373076/pexels-photo-373076.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);">
                                 <div class="overlay"></div>
                                 <div class="container-fluid">
                                 <div class="row">
@@ -78,7 +78,7 @@
                                 </div>
                                 </div>
                             </li>
-                            <li style="background-image: url('https://image.freepik.com/free-photo/laptop-computer-with-white-background-home-office-business-office-concept_55099-127.jpg');">
+                            <li style="background-image: url(https://image.freepik.com/free-photo/laptop-computer-with-white-background-home-office-business-office-concept_55099-127.jpg);">
                                 <div class="overlay"></div>
                                 <div class="container-fluid">
                                 <div class="row">
@@ -542,7 +542,7 @@ Design a website that request user for login and signup after that there are var
                                         <i class="fa fa-linkedin"></i>
                                     </div>
                                     <div class="colorlib-text">
-                                        <p><a href="https://www.https://www.linkedin.com/in/pranav-j-598004105/">LinkedIN</a></p>
+                                        <p><a href="https://www.linkedin.com/in/pranav-j-598004105/">LinkedIN</a></p>
                                     </div>
                                 </div>
 
