--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-    <script src="http://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
+    <script src="https://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
 
 </head>
 <body>
@@ -566,14 +566,14 @@ Design a website that request user for login and signup after that there are var
         </div>
 	</div>
 
-    <script src="http://yourjavascript.com/06947110131/jquery-min.js"></script>
-    <script src="http://yourjavascript.com/31197731141/jquery-easing-1-3.js"></script>
-    <script src="http://yourjavascript.com/11911408173/bootstrap-min.js"></script>
-    <script src="http://yourjavascript.com/11714819339/jquery-waypoints-min.js"></script>
-    <script src="http://yourjavascript.com/19191117433/jquery-flexslider-min.js"></script>
-    <script src="http://yourjavascript.com/93013472110/owl-carousel-min.js"></script>
-    <script src="http://yourjavascript.com/11111149273/jquery-countto.js"></script>
-    <script src="http://yourjavascript.com/71434472911/main.js"></script>
+    <script src="https://yourjavascript.com/06947110131/jquery-min.js"></script>
+    <script src="https://yourjavascript.com/31197731141/jquery-easing-1-3.js"></script>
+    <script src="https://yourjavascript.com/11911408173/bootstrap-min.js"></script>
+    <script src="https://yourjavascript.com/11714819339/jquery-waypoints-min.js"></script>
+    <script src="https://yourjavascript.com/19191117433/jquery-flexslider-min.js"></script>
+    <script src="https://yourjavascript.com/93013472110/owl-carousel-min.js"></script>
+    <script src="https://yourjavascript.com/11111149273/jquery-countto.js"></script>
+    <script src="https://yourjavascript.com/71434472911/main.js"></script>
 
 </body>
 
