--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
-    <script src="https://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
+    <script src="http://yourjavascript.com/39251874311/modernizr-2-6-2-min.js"></script>
 
 </head>
 <body>
